--- a/src/alpaca_eval/evaluators_configs/weighted_alpaca_eval_gpt4_turbo/configs.yaml
+++ b/src/alpaca_eval/evaluators_configs/weighted_alpaca_eval_gpt4_turbo/configs.yaml
@@ -2,7 +2,8 @@ weighted_alpaca_eval_gpt4_turbo:
   prompt_template: "alpaca_eval_clf_gpt4_turbo/alpaca_eval_clf.txt"
   fn_completions: "openai_completions"
   completions_kwargs:
-    model_name: "gpt-4-1106-preview"
+    # model_name: "gpt-4-1106-preview"
+    model_name: "gpt-4-0613"
     max_tokens: 1
     temperature: 1 # temperature should be applied for sampling, so that should make no effect.
     logprobs: true
