--- a/src/alpaca_eval/models_configs/phi-2-5/configs.yaml
+++ b/src/alpaca_eval/models_configs/phi-2-5/configs.yaml
@@ -5,6 +5,7 @@ phi-2-5:
     model_name: "microsoft/phi-2"
     model_kwargs:
       torch_dtype: "float16"
+      eos_token_id: 32000
       # trust_remote_code: True
     max_new_tokens: 2048
     temperature: 0.7
